samples/_failures_safe/1761540139_9cca77_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07055fb3.c: In function ‘main’:
./samples/SAFE/__tmp_07055fb3.c:152:37: error: expected ‘)’ at end of input
  152 |     if (scanf("%d", &startNode) != 1
      |        ~                            ^
      |                                     )
./samples/SAFE/__tmp_07055fb3.c:152:5: error: expected declaration or statement at end of input
  152 |     if (scanf("%d", &startNode) != 1
      |     ^~
